include/multifloats.h

typedef struct { double hi, lo; } float64x2_t;
/* Arithmetic */
MULTIFLOATS_API float64x2_t adddd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t subdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t muldd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t divdd(float64x2_t a, float64x2_t b);
/* Unary */
MULTIFLOATS_API float64x2_t negdd(float64x2_t a);
MULTIFLOATS_API float64x2_t fabsdd(float64x2_t a);
MULTIFLOATS_API float64x2_t sqrtdd(float64x2_t a);
/* Rounding. truncdd matches C trunc / Fortran AINT (toward zero).
 * rounddd matches C round / Fortran ANINT (to nearest, halfway away). */
MULTIFLOATS_API float64x2_t truncdd(float64x2_t a);
MULTIFLOATS_API float64x2_t rounddd(float64x2_t a);
/* Binary */
MULTIFLOATS_API float64x2_t fmindd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t fmaxdd(float64x2_t a, float64x2_t b);
/* Integer-exponent power via exponentiation-by-squaring: ⌈log2|n|⌉
 * squarings plus popcount(|n|) multiplies, exact up to DD precision
 * per step. One DD division at the end when n < 0. */
MULTIFLOATS_API float64x2_t powidd(float64x2_t a, int n);
/* Floored modulo (Fortran `modulo` semantics): same sign as y.
 * modulodd(x, y) = fmod(x, y), plus y if the remainder and y have
 * opposite signs. Uses DD signbit (first-nonzero-limb), so
 * non-canonical DDs with hi==0 still get the right sign. */
MULTIFLOATS_API float64x2_t modulodd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t fdimdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API float64x2_t copysigndd(float64x2_t a, float64x2_t b);
/* Comparison (return int: 1 = true, 0 = false) */
MULTIFLOATS_API int eqdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API int nedd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API int ltdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API int ledd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API int gtdd(float64x2_t a, float64x2_t b);
MULTIFLOATS_API int gedd(float64x2_t a, float64x2_t b);